--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -32,6 +32,7 @@
     "all_users": "All Users",
     "all_institutions": "All Institutions",
     "all_devices": "All Devices",
+    "all_activites": "All Activites",
     "search_operations": "Search Operations",
     "search_users": "Search Users",
     "search_institutions": "Search Institutions",
@@ -51,6 +52,33 @@
     "delete_profile": "Delete Profile",
     "all_profiles": "All Profiles",
     "search_profiles": "Search Profiles",
-    "home": "Home"
+    "home": "Home",
+    "control_panel": "Control Panel",
+    "confirm_password": "Confirm Password",
+    "permissions": "Permissions",
+    "name": "Name",
+    "add": "Add",
+    "cancel": "Cancel",
+    "location": "Location",
+    "start_date": "Start Date",
+    "end_date": "End Date",
+    "status": "Status",
+    "description": "Description",
+    "preventive_maintenance": "Preventive Maintenance",
+    "work_plans": "Work Plans",
+    "edit_or_delete": "Edit or Delete",
+    "edit_or_delete_or_maintenance": "Edit, Delete Or Maintenance",
+    "gas_tank": "Gas Tank",
+    "oxygen_tank": "Oxygen Tank",
+    "type": "Type",
+    "image": "Image",
+    "notes": "Notes",
+    "activities": "Activities",
+    "operation_type": "Operation Type",
+    "operation_date": "Operation Date",
+    "operation_place": "Operation Place",
+    "choose_institution": "Choose Institution",
+    "no_institution": "No Institution Available",
+    "choose": "Choose"
 
 }
