--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -33,6 +33,7 @@
     "all_users": "كل المستخدمين",
     "all_institutions": "كل المؤسسات",
     "all_devices": "جميع الاصول",
+    "all_activites": "جميع الانشطة",
     "search_operations": "البحث في أوامر التشغيل",
     "search_users": "البحث في المستخدمين",
     "search_institutions": "البحث في المؤسسات",
@@ -52,5 +53,32 @@
     "delete_profile": "حذف الملف الشخصي",
     "all_profiles": "كل الملفات الشخصية",
     "search_profiles": "البحث في الملفات الشخصية",
-    "home": "الصفحة الرئيسية"
+    "home": "الصفحة الرئيسية",
+    "control_panel": "لوحة التحكم",
+    "confirm_password": "تأكيد كلمة المرور",
+    "permissions": "الصلاحيات",
+    "name": "الاسم",
+    "add": "إضافة",
+    "cancel": "إلغاء",
+    "location": "الموقع",
+    "start_date": "تاريخ البدء",
+    "end_date": "تاريخ الانتهاء",
+    "status": "الحالة",
+    "description": "الوصف",
+    "preventive_maintenance": "الصيانة الوقائية",
+    "work_plans": "خطط العمل",
+    "edit_or_delete": "تعديل أو حذف",
+    "edit_or_delete_or_maintenance": "تعديل أو حذف أو صيانة",
+    "gas_tank": "تانك السولار",
+    "oxygen_tank": "تانك الأكسجين",
+    "type": "النوع",
+    "image": "صورة",
+    "notes": "ملاحظات",
+    "activities": "الانشطة",
+    "operation_type": "نوع العملية",
+    "operation_date": "تاريخ العملية",
+    "operation_place": "مكان العملية",
+    "choose_institution": "اختر مؤسسة",
+    "no_institution": "لا توجد مؤسسات",
+    "choose": "اختر"
 }
