--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -86,5 +86,6 @@
     "third_week": "الأسبوع الثالث",
     "fourth_week": "الأسبوع الرابع",
     "device": "الاصل",
-    "code": "الكود"
+    "code": "الكود",
+    "edit_user_info": "تعديل بيانات المستخدم"
 }
