--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -85,6 +85,7 @@
     "third_week": "Third Week",
     "fourth_week": "Fourth Week",
     "device": "Device",
-    "code": "Code"
+    "code": "Code",
+    "edit_user_info": "Edit User Info"
 
 }
