--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -87,5 +87,8 @@
     "fourth_week": "الأسبوع الرابع",
     "device": "الاصل",
     "code": "الكود",
-    "edit_user_info": "تعديل بيانات المستخدم"
+    "edit_user_info": "تعديل بيانات المستخدم",
+    "are_you_sure": "هل أنت متأكد انك تريد حذف المستخدم؟",
+    "are_you_sure2": "هل أنت متأكد انك تريد حذف الاصل",
+    "edit_device_info": "تعديل بيانات الاصل"
 }
